--- a/public/css/front/styleIndex.scss
+++ b/public/css/front/styleIndex.scss
@@ -5,7 +5,7 @@
 
 
 @import '_loading';
-@import '_pop';
+@import '_popIndex';
 @import '_menuBarIndex';
 @import '_mainIndex';
 @import '_sec01Index';
