--- a/public/css/front/_sec02Index.scss
+++ b/public/css/front/_sec02Index.scss
@@ -42,8 +42,12 @@
                 width: 70%;
             }
             @include md() {
+                height: 77%;
                 width: 90%;
                 flex-direction: column;
+            }
+            @include sm() {
+                background: none;
             }
             @include xxs() {
                 height: 62%;
@@ -66,6 +70,16 @@
                 width: 50%;
                 height: 100%;
                 overflow: hidden;
+
+                // @include sm() {
+                //     width: 90%;
+                //     height: 52%;
+                // }
+                @include xs() {
+                    width: 90%;
+                    height: 52%;
+                }
+                
 
                 .slickImg {
                     height: 100%;
@@ -117,6 +131,17 @@
                 @include md{
                     width: 90%;
                 }
+                @include mmd{
+                    width: 58%;
+                }
+                // @include sm{
+                //     width: 90%;
+                //     height: 48%;
+                // }
+                @include xs{
+                    width: 90%;
+                    height: 48%;
+                }
                 .newsBtn {
                     letter-spacing: 0.3rem;
                     cursor: pointer;
@@ -140,6 +165,55 @@
                     width: 100%;
                     height: 90%;
                     background-color: #fff;
+                }
+
+
+                .pagination {
+                    list-style: none;
+                    text-align: center;
+                    margin-bottom: .4rem;
+                    width: 100%;
+
+                    li {
+                        display: inline-block;
+                        margin-right: 10px;
+                    }
+
+                    .page-item {
+
+                        font-size: 1.75rem;
+                        padding: 8px;
+                        text-decoration: none;
+                        font-weight: 500;
+                        letter-spacing: 1rem;
+
+                        .page-link {
+                            color: #808a00;
+                        }
+                        &.disabled {
+                            font-size: 1.75rem;
+                            padding: 8px;
+                            text-decoration: none;
+
+                            .page-link {
+                                color: #808a00;
+                            }
+                        }
+
+                        &.active {
+                            width: 43px;
+                            height: 43px;
+                            color: #fff;
+                            background-color: #808a00;
+                            font-size: 1.75rem;
+                            padding: 8px;
+                            text-decoration: none;
+
+                            .page-link {
+                                color: #fff;
+                            }
+                        }
+                    }
                 }
             }
             .newsContainer {
@@ -168,9 +242,11 @@
                         color: #ff5b6a;
                     }
                     .textBox {
+                        border: #808a00 1px solid;
                         display: flex;
                         justify-content: space-between;
                         align-items: flex-end;
+                        cursor: pointer;
                     }
                 }
             }
