--- a/public/css/front/_popIndex.scss
+++ b/public/css/front/_popIndex.scss
@@ -39,6 +39,9 @@
             font-weight: 800;
             z-index: 1;
 
+            overflow-y: scroll;
+
+
             background-color: #f2ff6c;
             border: 5px solid #fff;
 
@@ -52,6 +55,10 @@
                 width: 90%;
                 justify-content: space-between;
                 align-items: flex-end;
+                @include sm {
+                    align-items: center;
+                    flex-direction: column;
+                }
             }
 
             .line {
@@ -89,8 +96,7 @@
                 width: 100%;
                 height: 100%;
                 max-height: 400px;
-                overflow-y: scroll;
-                @include md{
+                @include md {
                     margin-top: 4rem;
                 }
             }
