--- a/public/css/front/_sec01Index.scss
+++ b/public/css/front/_sec01Index.scss
@@ -72,7 +72,7 @@
             }
         }
         .box1 {
-            border: 2px solid red;
+            // border: 2px solid red;
             top: 42%;
             left: 50%;
             height: 80%;
