--- a/public/css/front/_popIndex.scss
+++ b/public/css/front/_popIndex.scss
@@ -32,7 +32,7 @@
             max-height: 669px;
             width: 100%;
             height: 100%;
-            border-radius: 30px;
+            border-radius: 16px;
             text-align: center;
             line-height: 35px;
             font-size: 1.3rem;
@@ -70,7 +70,7 @@
             .text,
             .title,
             .time {
-                border: 1px solid blue;
+                // border: 1px solid blue;
                 color: #371d04;
                 margin-bottom: 20px;
             }
