--- a/public/css/front/_sec02Index.scss
+++ b/public/css/front/_sec02Index.scss
@@ -69,7 +69,7 @@
             }
             .slickBox {
                 transform: rotate(-2deg);
-                border: 1px solid rgb(34, 90, 36);
+                // border: 1px solid rgb(34, 90, 36);
                 max-width: 650px;
                 max-height: 450px;
                 width: 50%;
