--- a/public/css/front/_popIndex.scss
+++ b/public/css/front/_popIndex.scss
@@ -76,8 +76,8 @@
             }
             img {
                 display: inline-block;
-                width: 100%;
-                height: 100%;
+                max-width: 100%;
+                max-height: 100%;
                 -o-object-fit: contain;
                 object-fit: contain;
                 cursor: pointer;
