--- a/public/css/front/styleIndex.css
+++ b/public/css/front/styleIndex.css
@@ -508,8 +508,8 @@ textarea {
 }
 .popupIndex .popBox .info img {
   display: inline-block;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   -o-object-fit: contain;
   object-fit: contain;
   cursor: pointer;
@@ -1477,6 +1477,7 @@ body {
   font-size: 1.56rem;
   font-weight: 600;
   white-space: nowrap;
+  text-align: center;
 }
 .section2 .sec_box .sec2_box2 .news .newsBtn.active {
   background-color: #fff;
@@ -1514,7 +1515,7 @@ body {
 @media all and (max-width: 900px) {
   .section2 .sec_box .sec2_box2 .news .pagination .page-item {
     padding: 13px 16px 0;
-    line-height: 3.7rem;
+    line-height: 1.7rem;
   }
 }
 .section2 .sec_box .sec2_box2 .news .pagination .page-item.active {
