--- a/public/css/front/_popIndex.scss
+++ b/public/css/front/_popIndex.scss
@@ -88,7 +88,8 @@
             }
             .text {
                 margin-top: 3rem;
-                font-size: 1.3rem;
+                // font-size: 1.3rem;
+                font-size: 100%;
                 text-align: center;
                 display: flex;
                 justify-content: center;
@@ -96,6 +97,7 @@
                 width: 100%;
                 height: 100%;
                 max-height: 400px;
+                flex-direction: column;
                 @include md {
                     margin-top: 4rem;
                 }
