--- a/public/css/front/styleIndex.css
+++ b/public/css/front/styleIndex.css
@@ -520,7 +520,7 @@ textarea {
 }
 .popupIndex .popBox .info .text {
   margin-top: 3rem;
-  font-size: 1.3rem;
+  font-size: 100%;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -528,6 +528,7 @@ textarea {
   width: 100%;
   height: 100%;
   max-height: 400px;
+  flex-direction: column;
 }
 @media all and (max-width: 900px) {
   .popupIndex .popBox .info .text {
