--- a/public/css/front/_popIndex.scss
+++ b/public/css/front/_popIndex.scss
@@ -9,7 +9,7 @@
     background-color: #0000009f;
     padding: 60px;
     letter-spacing: 3px;
-    text-align: center;
+    // text-align: center;
     .popBox {
         width: 100%;
         max-width: 1700px;
@@ -33,14 +33,13 @@
             width: 100%;
             height: 100%;
             border-radius: 16px;
-            text-align: center;
+            // text-align: center;
             line-height: 35px;
             font-size: 1.3rem;
             font-weight: 800;
             z-index: 1;
 
             overflow-y: scroll;
-
 
             background-color: #f2ff6c;
             border: 5px solid #fff;
@@ -90,7 +89,7 @@
                 margin-top: 3rem;
                 // font-size: 1.3rem;
                 font-size: 100%;
-                text-align: center;
+                // text-align: center;
                 display: flex;
                 justify-content: center;
                 max-width: 900px;
@@ -123,5 +122,101 @@
         left: 0;
         width: 100%;
         height: 100%;
+    }
+
+    table,
+    caption,
+    tbody,
+    tfoot,
+    thead,
+    tr,
+    th,
+    td {
+        border: 1px solid;
+    }
+    .text {
+        html,
+        body,
+        div,
+        span,
+        applet,
+        object,
+        iframe,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        p,
+        blockquote,
+        pre,
+        a,
+        abbr,
+        acronym,
+        address,
+        big,
+        cite,
+        code,
+        del,
+        dfn,
+        em,
+        img,
+        ins,
+        kbd,
+        q,
+        s,
+        samp,
+        small,
+        strike,
+        strong,
+        sub,
+        sup,
+        tt,
+        var,
+        b,
+        u,
+        i,
+        center,
+        dl,
+        dt,
+        dd,
+        ol,
+        ul,
+        li,
+        fieldset,
+        form,
+        label,
+        legend,
+        table,
+        caption,
+        tbody,
+        tfoot,
+        thead,
+        tr,
+        th,
+        td,
+        article,
+        aside,
+        canvas,
+        details,
+        embed,
+        figure,
+        figcaption,
+        footer,
+        header,
+        hgroup,
+        menu,
+        nav,
+        output,
+        ruby,
+        section,
+        summary,
+        time,
+        mark,
+        audio,
+        video {
+            font: revert;
+        }
     }
 }
