--- a/public/css/front/_popIndex.scss
+++ b/public/css/front/_popIndex.scss
@@ -91,7 +91,7 @@
                 font-size: 100%;
                 // text-align: center;
                 display: flex;
-                justify-content: center;
+                // justify-content: center;
                 max-width: 900px;
                 width: 100%;
                 height: 100%;
